# SAGA

./: CMakeLists.txt  build_macos.sh
engine/: CMakeLists.txt
engine/src/: Application.hpp  Entry.hpp  pch.hpp
engine/src/core/: Application.cpp  Application.hpp  Assert.hpp  Extent.hpp  Inputs.cpp  Inputs.hpp  Logging.hpp  Memory.hpp  Time.hpp  TypeId.hpp  UUID.cpp  UUID.hpp  Version.hpp
engine/src/core/event/: Event.cpp  Event.hpp
engine/src/core/event/keyboard/: Key.hpp  KeyDownEvent.hpp  KeyUpEvent.hpp
engine/src/core/event/mouse/: Mouse.hpp  MouseDownEvent.hpp  MouseMotionEvent.hpp  MouseUpEvent.hpp  MouseWheelEvent.hpp
engine/src/core/event/system/: System.hpp  SystemQuitEvent.hpp
engine/src/core/service/: EventDispatcherService.hpp  Locator.hpp
engine/src/event/: Event.hpp  EventDispatcher.cpp  EventDispatcher.hpp
engine/src/event/keyboard/: Key.hpp  KeyDownEvent.hpp  KeyUpEvent.hpp
engine/src/event/mouse/: Mouse.hpp  MouseDownEvent.hpp  MouseMotionEvent.hpp  MouseUpEvent.hpp  MouseWheelEvent.hpp
engine/src/event/system/: System.hpp  SystemQuitEvent.hpp
engine/src/service/: EventDispatcherService.hpp  Locator.cpp  Locator.hpp
game/: CMakeLists.txt
game/src/: Game.cpp
